clusters/production/apps/rook-ceph/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: rook-ceph
spec:
  stripPrefix:
    prefixes:
      - /ui
