clusters/production/apps/rook-ceph/create-mon-dirs-job.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: create-mon-dirs
  namespace: rook-ceph
spec:
  selector:
    matchLabels:
      app: create-mon-dirs
  template:
    metadata:
      labels:
        app: create-mon-dirs
    spec:
      serviceAccountName: rook-ceph-system
      containers:
      - name: sleep
        image: busybox:latest
        command: ["sleep", "3600"]
      volumes:
      - name: host-path
        hostPath:
          path: /var/lib/rook
