clusters/production/apps/rook-ceph/ceph-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-dashboard-http
  namespace: rook-ceph
spec:
  ports:
  - name: http-dashboard
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  sessionAffinity: None
  type: ClusterIP
