clusters/production/apps/rook-ceph/ceph-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ceph.local`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
          scheme: http
  tls: {}
